# bookie-ext-rs

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  models.rs
src/openai/: mod.rs  models.rs
