[package]
name = "bookie-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-service = { version = "0.11.0", features = ["web-axum"] }
axum = "0.6.6"
sync_wrapper = "0.1.2"
rust_tokenizers = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
snailquote = "0.3.1"
async-recursion = "1.0.2"
env_logger = "0.10.0"
